--- a/dl_01_keras_layer.ipynb
+++ b/dl_01_keras_layer.ipynb
@@ -2,40 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
     "from tensorflow.keras.models import Sequential"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [1] Keras Layers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [1.1] Dense Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_11\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 32)                288       \n",
+      "dense_16 (Dense)             (None, 16)                144       \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 10)                170       \n",
       "=================================================================\n",
-      "Total params: 288\n",
-      "Trainable params: 288\n",
+      "Total params: 314\n",
+      "Trainable params: 314\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "model = Sequential()\n",
-    "model.add(Dense(32, input_shape = (8, )))\n",
-    "model.summary()"
+    "model_1 = Sequential()\n",
+    "model_1.add(Dense(16, input_shape = (8, )))\n",
+    "model_1.add(Dense(10))\n",
+    "model_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model_1.get_weights())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [1.2] Dropout Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_12\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_18 (Dense)             (None, 32)                288       \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 32)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 10)                330       \n",
+      "=================================================================\n",
+      "Total params: 618\n",
+      "Trainable params: 618\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_2 = Sequential()\n",
+    "model_2.add(Dense(32, input_shape = (8, )))\n",
+    "model_2.add(Dropout(0.2))\n",
+    "model_2.add(Dense(10))\n",
+    "model_2.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [1.3] Flatten Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_13\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_20 (Dense)             (None, 16)                144       \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 16)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_21 (Dense)             (None, 10)                170       \n",
+      "=================================================================\n",
+      "Total params: 314\n",
+      "Trainable params: 314\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_3 = Sequential()\n",
+    "model_3.add(Dense(16, input_shape = (8, )))\n",
+    "model_3.add(Flatten())\n",
+    "model_3.add(Dense(10))\n",
+    "model_3.summary()"
    ]
   }
  ],
