feat: Implement model compile, fit, prediction and accuracy in binary classification

--- a/dl_02_keras_initialzers.ipynb
+++ b/dl_02_keras_initialzers.ipynb
@@ -118,17 +118,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### VarianceScaling kernel initializer"
+    "#### GlorotNormal kernel initializer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[-0.68209934, -0.19348271, -0.26617697,  0.03497295, -0.10683383,\n",
+      "         0.03635491, -0.3428115 ,  0.29009834],\n",
+      "       [ 0.6686501 , -0.04706721,  0.15338056,  0.18707098, -0.23599736,\n",
+      "        -0.0154672 , -0.23842064,  0.13924173],\n",
+      "       [ 0.36894402,  0.10417961, -0.44343334, -0.53933185,  0.39739266,\n",
+      "        -0.13013324,  0.54159564,  0.42011642],\n",
+      "       [-0.49822113,  0.43264237,  0.43433946,  0.1240067 ,  0.03155813,\n",
+      "         0.2266172 , -0.18419772,  0.26519337],\n",
+      "       [ 0.34029472, -0.5443729 , -0.05199324, -0.5451052 , -0.10069335,\n",
+      "        -0.05688889, -0.51283437,  0.15434295],\n",
+      "       [ 0.38627452,  0.12349917, -0.17112927, -0.16828446, -0.76604706,\n",
+      "        -0.1839596 ,  0.57489675,  0.09301861],\n",
+      "       [-0.25343543,  0.25609827, -0.10423665, -0.53450584,  0.06895908,\n",
+      "         0.34061694,  0.5780484 ,  0.2851044 ],\n",
+      "       [-0.4328602 , -0.2281832 ,  0.44535768, -0.2538807 , -0.02688705,\n",
+      "        -0.5822111 ,  0.3731011 , -0.7972619 ]], dtype=float32), array([0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#GlorotNormal\n",
-    "glorot_normal_init = GlorotNormal(seed = )"
+    "glorot_normal_init = GlorotNormal(seed = 0)\n",
+    "glorot_normal_model = Sequential()\n",
+    "glorot_normal_model.add(Dense(8, input_shape = (8, ), kernel_initializer = glorot_normal_init))\n",
+    "\n",
+    "show_weights(glorot_normal_model)"
    ]
   },
   {
