refactor: Implement custom callback LogHistory in keras

--- a/dl_04_keras_callbacks.ipynb
+++ b/dl_04_keras_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import mnist\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Activation\n",
-    "from tensorflow.keras.utils import to_categorical"
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.losses import binary_crossentropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +136,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LossHistory(tf.keras.callbacks.Callback):\n",
+    "    \n",
+    "    def on_train_begin(self, logs = {}):\n",
+    "        \n",
+    "        self.history = {\n",
+    "            'loss': []\n",
+    "        }\n",
+    "        \n",
+    "    def on_epoch_end(self, epoch, logs = {}):\n",
+    "\n",
+    "        self.history['loss'].append(logs.get('loss'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history_own = LossHistory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.initializers import glorot_normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(Dense(48, activation = 'sigmoid', input_shape = (784, ), kernel_initializer = glorot_normal(seed = 6)))\n",
+    "model.add(Dense(10, activation = 'softmax', kernel_initializer = glorot_normal(seed = 7)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = Adam(learning_rate = 0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer = optimizer, loss = 'binary_crossentropy', metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 48000 samples, validate on 12000 samples\n",
+      "Epoch 1/10\n",
+      "48000/48000 [==============================] - 5s 107us/sample - loss: 0.2753 - accuracy: 0.9065 - val_loss: 0.2769 - val_accuracy: 0.9166\n",
+      "Epoch 2/10\n",
+      "48000/48000 [==============================] - 5s 95us/sample - loss: 0.2694 - accuracy: 0.9081 - val_loss: 0.2606 - val_accuracy: 0.9068\n",
+      "Epoch 3/10\n",
+      "48000/48000 [==============================] - 5s 99us/sample - loss: 0.2694 - accuracy: 0.9062 - val_loss: 0.2659 - val_accuracy: 0.9057\n",
+      "Epoch 4/10\n",
+      "48000/48000 [==============================] - 5s 98us/sample - loss: 0.2767 - accuracy: 0.9086 - val_loss: 0.2693 - val_accuracy: 0.9142\n",
+      "Epoch 5/10\n",
+      "48000/48000 [==============================] - 4s 93us/sample - loss: 0.2725 - accuracy: 0.9106 - val_loss: 0.2677 - val_accuracy: 0.9119\n",
+      "Epoch 6/10\n",
+      "48000/48000 [==============================] - 5s 95us/sample - loss: 0.2766 - accuracy: 0.9109 - val_loss: 0.2661 - val_accuracy: 0.9143\n",
+      "Epoch 7/10\n",
+      "48000/48000 [==============================] - 5s 96us/sample - loss: 0.2661 - accuracy: 0.9122 - val_loss: 0.2673 - val_accuracy: 0.9119\n",
+      "Epoch 8/10\n",
+      "48000/48000 [==============================] - 5s 98us/sample - loss: 0.2690 - accuracy: 0.9077 - val_loss: 0.2594 - val_accuracy: 0.9110\n",
+      "Epoch 9/10\n",
+      "48000/48000 [==============================] - 4s 93us/sample - loss: 0.2682 - accuracy: 0.9113 - val_loss: 0.2613 - val_accuracy: 0.9113\n",
+      "Epoch 10/10\n",
+      "48000/48000 [==============================] - 4s 91us/sample - loss: 0.2463 - accuracy: 0.9136 - val_loss: 0.2472 - val_accuracy: 0.9107\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x202dcfc56d8>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x = d_train, y = y_train, epochs = 10, batch_size = 32, validation_split = 0.2, callbacks = [history_own])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': [0.27533504044016205,\n",
+       "  0.26942911618947984,\n",
+       "  0.2694016211529573,\n",
+       "  0.276691732664903,\n",
+       "  0.27245342516899107,\n",
+       "  0.276587271630764,\n",
+       "  0.266121991366148,\n",
+       "  0.2689879088302453,\n",
+       "  0.2682433455487092,\n",
+       "  0.24629371153314908]}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history_own.history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
