fix: Delete unnecessary code

--- a/dl_05_mnist.ipynb
+++ b/dl_05_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "'2.1.0'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "60000"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 0, 4, 1], dtype=uint8)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_Train[:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,47 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_pixels = np.multiply(D_Train.shape[1], D_Train.shape[2])\n",
-    "d_train_raw = D_Train.reshape(D_Train.shape[0], input_pixels).astype('float32') / 255\n",
-    "d_test_raw = D_Test.reshape(D_Test.shape[0], input_pixels).astype('float32') / 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(60000, 784)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d_train_raw.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train_raw = Y_Train.astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -227,84 +207,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#d_train = d_train_raw.astype('float32')\n",
-    "#d_test = d_test_raw.astype('float32')"
+    "input_pixels = np.multiply(D_Train.shape[1], D_Train.shape[2])\n",
+    "d_train_raw = D_Train.reshape(D_Train.shape[0], input_pixels).astype('float32') / D_Train.max()\n",
+    "d_test_raw = D_Test.reshape(D_Test.shape[0], input_pixels).astype('float32') / D_Train.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print('d_train shape : ', d_train.shape)\n",
-    "#print('d_test shape  : ', d_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "(60000, 10)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(60000, 784)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train = to_categorical(Y_Train, 10)\n",
-    "print(type(y_train))\n",
-    "print(y_train.shape)"
+    "d_train_raw.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "(10000, 10)\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_test = to_categorical(Y_Test, num_classes = 10)\n",
-    "print(type(y_test))\n",
-    "print(y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#d_train_n = np.divide(d_train, d_train.max())\n",
-    "#d_test_n = np.divide(d_test, d_train.max())"
+    "y_train_raw = Y_Train.astype('float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,19 +256,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Input(shape = (input_pixels, )))\n",
-    "model.add(Dense(128, activation = 'relu', kernel_initializer = 'normal'))\n",
-    "model.add(Dense(10, activation = 'softmax', kernel_initializer = 'normal'))"
+    "\n",
+    "model.add(\n",
+    "            Input(shape = (input_pixels, ))\n",
+    "        )\n",
+    "\n",
+    "model.add(\n",
+    "            Dense(\n",
+    "                    128,\n",
+    "                    activation = 'relu',\n",
+    "                    kernel_initializer = 'normal'\n",
+    "                )\n",
+    "        )\n",
+    "\n",
+    "model.add(\n",
+    "            Dense(\n",
+    "                    10,\n",
+    "                    activation = 'softmax',\n",
+    "                    kernel_initializer = 'normal'\n",
+    "                )\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,11 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.compile(optimizer = optimizer, loss = 'categorical_crossentropy', metrics = ['accuracy'])\n",
     "model.compile(\n",
     "                optimizer = optimizer,\n",
     "                loss = tf.keras.losses.SparseCategoricalCrossentropy(),\n",
@@ -348,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -356,16 +315,16 @@
      "output_type": "stream",
      "text": [
       "Train on 48000 samples, validate on 12000 samples\n",
-      "48000/48000 [==============================] - 14s 300us/sample - loss: 0.5717 - sparse_categorical_accuracy: 0.8587 - val_loss: 0.4983 - val_sparse_categorical_accuracy: 0.8842\n"
+      "48000/48000 [==============================] - 13s 263us/sample - loss: 0.5608 - sparse_categorical_accuracy: 0.8611 - val_loss: 0.4645 - val_sparse_categorical_accuracy: 0.8882\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1cc2cd73e10>"
+       "<tensorflow.python.keras.callbacks.History at 0x1f3809d1278>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +362,7 @@
        "'Sneaker'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
